Fixed times icon not showing properly on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -180,4 +180,8 @@ code {
     width: 100%;
     height: 0.5px;
   }
+
+  .menu-icon.open span:nth-child(3) {
+    top: 15px;
+  }
 }
