--- a/src/layout/Navbar.module.css
+++ b/src/layout/Navbar.module.css
@@ -29,16 +29,6 @@
     z-index: 2;
 }
 
-@media (max-width: 767.98px){
-    .logoContainer {
-        margin-top: 16px;
-    }
-
-    .navbarContainer {
-        padding: 0 24px;
-    }
-}
-
 .menuIcon span {
     display: block;
     position: absolute;
@@ -106,4 +96,18 @@
     transform: rotate(-45deg);
     top: 16px;
     left: 8px;
+}
+
+@media (max-width: 767.98px){
+    .logoContainer {
+        margin-top: 16px;
+    }
+
+    .navbarContainer {
+        padding: 0 24px;
+    }
+
+    .menuIcon.open span:nth-child(3) {
+        top: 15px;
+    }
 }
